# blogos

./: Cargo.toml  \  flake.nix
blogos-lib/: Cargo.toml
blogos-lib/src/: lib.rs
blogos-lib/src/hardware/: instruction.rs  mod.rs  tree.rs
