[workspace]
resolver = "2"
members = ["blogos-lib"]

[workspace.package]
version = "0.1.0"
authors = ["Jack Bradner <jnbradner@proton.me>"]
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
